--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <body class="font-neutral">
     <div class="ocher-flat background">
       <div class="bg">
-        <div class="bg-image" style="background-image: url(&quot;https://cdn.parketson.com/images/bf3d5e6a-ef09-497a-8e2f-c5d369b255ec.png&quot;);"></div>
+        <div class="bg-image" style="background-image: url("bkg.jpg");"></div>
         <!---->
       </div>
       <header class="header">
