--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <body class="font-neutral">
     <div class="ocher-flat background">
       <div class="bg">
-        <div class="bg-image" style="background-image: url("bkg.jpg");"></div>
+        <div class="bg-image" style="background-image: url('bkg.jpg');"></div>
         <!---->
       </div>
       <header class="header">
