--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0035)https://parket.parketson.com/#cta-4 -->
+<!-- saved from url=(0035)https://www.parketson.com/#cta-4 -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Циклевка паркета</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -107,9 +107,9 @@
       </div>
       <header class="header">
         <div class="container-lrg">
-          <div class="flex col-12 spread"><a href="https://parket.parketson.com/" class="logo primary-color parketson-builder-hoverable logo">+7 (980) 9010093</a> <a href="https://parket.parketson.com/#main-menu" id="menu" class="menu-toggle"><b class="nav-link mr0 secondary-color">☰</b></a>
-            <nav id="main-menu" role="navigation" class="main-menu"><a href="https://parket.parketson.com/#" id="main-menu-close" class="menu-close"><span class="bold">✕</span></a> <a href="https://parket.parketson.com/#pricing-3" class="nav-link secondary-color">Варианты циклёвки паркета</a><a href="https://parket.parketson.com/#checklist-1" class="nav-link secondary-color">Этапы циклевки</a>
-              <!----><a href="https://parket.parketson.com/#cta-4" class="nav-link secondary-color">Узнайте стоимость</a>
+          <div class="flex col-12 spread"><a href="https://www.parketson.com/" class="logo primary-color parketson-builder-hoverable logo">+7 (980) 9010093</a> <a href="https://www.parketson.com/#main-menu" id="menu" class="menu-toggle"><b class="nav-link mr0 secondary-color">☰</b></a>
+            <nav id="main-menu" role="navigation" class="main-menu"><a href="https://www.parketson.com/#" id="main-menu-close" class="menu-close"><span class="bold">✕</span></a> <a href="https://www.parketson.com/#pricing-3" class="nav-link secondary-color">Варианты циклёвки паркета</a><a href="https://www.parketson.com/#checklist-1" class="nav-link secondary-color">Этапы циклевки</a>
+              <!----><a href="https://www.parketson.com/#cta-4" class="nav-link secondary-color">Узнайте стоимость</a>
               <!---->
             </nav>
           </div>
@@ -241,7 +241,7 @@
                       </g>
                     </svg> <span class="span secondary-color">Идеально подходит для помещений с невысокой проходимостью (спальня).</span></li>
                 </ul>
-              </div> <a href="https://parket.parketson.com/" target="_blank" class="button mobile-text-center mt10 parketson-builder-hoverable button__full mobile-text-center accent-bg primary-color"> <span> Оставить заявку </span></a>
+              </div> <a href="https://www.parketson.com/" target="_blank" class="button mobile-text-center mt10 parketson-builder-hoverable button__full mobile-text-center accent-bg primary-color"> <span> Оставить заявку </span></a>
             </div>
             <div class="col-4 pad30 flex flex-column spread parketson-builder-hoverable">
               <div class="mb20">
@@ -268,7 +268,7 @@
                       </g>
                     </svg> <span class="span secondary-color">Идеально подходит для помещений с невысокой и средней проходимостью (спальня, гостиная, коридор).</span></li>
                 </ul>
-              </div> <a href="https://parket.parketson.com/" target="_blank" class="button mobile-text-center mt10 parketson-builder-hoverable button__full mobile-text-center accent-bg primary-color"> <span> Оставить заявку </span></a>
+              </div> <a href="https://www.parketson.com/" target="_blank" class="button mobile-text-center mt10 parketson-builder-hoverable button__full mobile-text-center accent-bg primary-color"> <span> Оставить заявку </span></a>
             </div>
             <div class="col-4 pad30 flex flex-column spread parketson-builder-hoverable">
               <div class="mb20">
