--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <!---->
       </section>
     </div>
-    <section id="checklist-1" class="section beige-white" sitemeta="[object Object]" activepage="Landing">
+    <section id="checklist-1" name="checklist-1" class="section beige-white" sitemeta="[object Object]" activepage="Landing">
       <div class="container text-center mb75">
         <div class="col-12">
           <h3 class="heading primary-color parketson-builder-hoverable">Этапы циклёвки</h3>
@@ -206,7 +206,7 @@
       </div>
       <!---->
     </section>
-    <section id="pricing-3" class="section beige-white" sitemeta="[object Object]" activepage="Landing">
+    <section id="pricing-3" name="pricing-3" class="section beige-white" sitemeta="[object Object]" activepage="Landing">
       <div class="container mb75 text-center">
         <div class="col-12">
           <h4 class="heading primary-color parketson-builder-hoverable">Варианты циклёвки паркета</h4>
@@ -306,7 +306,7 @@
         </div>
       </div>
     </section>
-    <section id="cta-4" class="section ocher-black" sitemeta="[object Object]" activepage="Landing">
+    <section id="cta-4" name="cta-4" class="section ocher-black" sitemeta="[object Object]" activepage="Landing">
       <!---->
       <div class="container text-center">
         <div class="col-12">
