--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
       </div>
       <header class="header">
         <div class="container-lrg">
-          <div class="flex col-12 spread"><a href="https://www.parketson.com/" class="logo primary-color parketson-builder-hoverable logo">+7 (980) 9010093</a> <a href="https://www.parketson.com/#main-menu" id="menu" class="menu-toggle"><b class="nav-link mr0 secondary-color">☰</b></a>
-            <nav id="main-menu" role="navigation" class="main-menu"><a href="https://www.parketson.com/#" id="main-menu-close" class="menu-close"><span class="bold">✕</span></a> <a href="https://www.parketson.com/#pricing-3" class="nav-link secondary-color">Варианты циклёвки паркета</a><a href="https://www.parketson.com/#checklist-1" class="nav-link secondary-color">Этапы циклевки</a>
-              <!----><a href="https://www.parketson.com/#cta-4" class="nav-link secondary-color">Узнайте стоимость</a>
+          <div class="flex col-12 spread"><a href="https://www.parketson.com/" class="logo primary-color parketson-builder-hoverable logo">Parketson.ru</a> <a href="https://www.parketson.com/#main-menu" id="menu" class="menu-toggle"><b class="nav-link mr0 secondary-color">☰</b></a>
+            <nav id="main-menu" role="navigation" class="main-menu"><a href="https://www.parketson.com/#" id="main-menu-close" class="menu-close"><span class="bold">✕</span></a> <a href="#pricing-3" class="nav-link secondary-color">Варианты циклёвки паркета</a><a href="#checklist-1" class="nav-link secondary-color">Этапы циклевки</a>
+              <!----><a href="#cta-4" class="nav-link secondary-color">Узнайте стоимость</a>
               <!---->
             </nav>
           </div>
@@ -317,6 +317,9 @@
     </section>
     <footer id="footer-5" class="section text-center beige-white" sitemeta="[object Object]" activepage="Landing">
       <div class="container col-12">
+        Читайте в нашем блоге:
+        <nav class="mb50"><a target="_blank" href="https://www.parketson.com/blog/index.html" class="nav-link secondary-color">Циклевка паркета – важно знать!</a></nav>
+
         <nav class="mb50"><a target="_blank" href="https://www.parketson.com/" class="nav-link secondary-color">+7 (980) 9010093</a></nav>
         <!---->
         <div class="mt50"><span class="span secondary-color">©</span> <span class="span secondary-color">2019 Компания «Parketson»</span></div>
